--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
+block script
+    script(type='text/javascript' src='vendor/lib/traceur-runtime.js')
+    script(type='text/javascript' src='vendor/lib/es6-module-loader.js')
+    script(type='text/javascript' src='vendor/lib/system.js')
+    script(type='text/javascript' src='vendor/lib/angular2.dev.js')
+
 block content
   h1= title
   p Welcome to #{title}
