add youtube video service, and bootstrap

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,12 +1,16 @@
-<h1>创业先修基本功--产品开发</h1>
-<h1>创业先修基本功 - 产品开发</h1>
-蘑菇街创始人兼CEO
-蘑菇街创始人兼 CEO
-<h2>
-  Gratz!
-</h2>
-
 <p>
-  Your deployment of Angular 2 Seed worked perfectly!
-  Click <em>about (above)</em> to get your reward!
+  This is the home of prog app!
+  Click <em>menu (above)</em> to manage your content!
 </p>
+<p>Updates:</p>
+<ul>
+  <li>
+    the first function is download video from youtube.com.
+  </li>
+</ul>
+<p>Supports:</p>
+<ul>
+  <li>
+    please send email to peanutou at msn dot com~
+  </li>
+</ul>
