--- a/stylesheets/less/style.less
+++ b/stylesheets/less/style.less
@@ -1,11 +1,18 @@
-@link-color: 			#00B7FF;
-@font-lucida-grande: 	  14px "Lucida Grande", Helvetica, Arial, sans-serif;
-
-body {
-	padding: 15px;
-	font: @font-lucida-grande;
+* {
+	margin: 0px;
+	padding: 0px;
+	border: 0px;
 }
 
-a:horizontal {
-	padding: 10px;
+html {
+	display: block;
+	box-sizing: border-box;
+}
+
+body {
+	padding: 0px;
+	border-spacing: 0;
+	font-size: 14px;
+	line-height: 20px;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
