--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,19 @@
 extends layout
 
 block script
-    script(type='text/javascript' src='vendor/lib/traceur-runtime.js')
-    script(type='text/javascript' src='vendor/lib/system.src.js')
-    script(type='text/javascript' src='vendor/lib/angular2.dev.js')
-    script(type='text/javascript' src='vendor/lib/router.dev.js')
-    script(type='text/javascript' src='vendor/lib/http.dev.js')
-    script(type='text/javascript' src='javascripts/system.config.js')
+  script(type='text/javascript' src='vendor/lib/traceur-runtime.js')
+  script(type='text/javascript' src='vendor/lib/system.src.js')
+  script(type='text/javascript' src='vendor/lib/angular2.dev.js')
+  script(type='text/javascript' src='vendor/lib/router.dev.js')
+  script(type='text/javascript' src='vendor/lib/http.dev.js')
+  script(type='text/javascript' src='javascripts/system.config.js')
+  script(type='text/javascript' src='vendor/lib/jquery/jquery.js')
+  script(type='text/javascript' src='vendor/lib/bootstrap/js/bootstrap.js')
+
+block link
+  link(rel='stylesheet', href='vendor/lib/bootstrap/css/bootstrap.css')
 
 block content
-  h1= title
-  p Welcome to #{title}
   prog-app
   script.
     System.import('app.js');
