--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/css/style.css')
     block script
+    block link
   body
     block content
