--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -2,13 +2,13 @@
   This is the home of prog app!
   Click <em>menu (above)</em> to manage your content!
 </p>
-<p>Updates:</p>
+<p><strong>Updates:</strong></p>
 <ul>
   <li>
     the first function is download video from youtube.com.
   </li>
 </ul>
-<p>Supports:</p>
+<p><strong>Supports:</strong></p>
 <ul>
   <li>
     please send email to peanutou at msn dot com~
